--- a/m/my/myf/myfirehost.com.html
+++ b/m/my/myf/myfirehost.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the myfirehost.com privacy policy that was archived on 2009-06-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615071826id_/http%3A//www.myfirehost.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the myfirehost.com privacy policy that was archived on 2009-10-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091015053123id_/http%3A//www.myfirehost.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>MyFireHost - Privacy Policy</title>
@@ -25,14 +25,14 @@
 
  <div class="row-1">
 
-          <div class="fleft"><a href="/"><img src="images/logo.png" alt=""></a>
+          <div class="fleft"><a href="/"><img src="/images/logo.png" alt=""></a>
 
 
 </div>
           <div class="fright">
             <ul class="list">
-              <li class="icon-1"><a href="faq.php">FAQ</a></li>
-              <li class="icon-2"><a href="/forums/member.php?action=login">login</a></li>
+              <li class="icon-1"><a href="/faq.php">FAQ</a></li>
+              <li class="icon-2"><a href="/forums/member.php?action=register">Sign up!</a></li>
             </ul>
           </div>
         </div>
@@ -41,9 +41,9 @@
             <li><a href="/"><em><b>Home</b></em></a></li>
             <li><a href="about.php"><em><b>About us</b></em></a></li>
             <li><a href="hosting.php"><em><b>Hosting</b></em></a></li>
-            <li><a href="/forums/member.php?action=register"><em><b>Register</b></em></a></li>
+            <li><a href="support.php"><em><b>Support</b></em></a></li>
             <li><a href="/forums"><em><b>Forums</b></em></a></li>
-            <li class="last"><a href="/hcl/module.php?module=HelpCenter"><em><b>Live Chat</b></em></a></li>
+            <li class="last"><a href="donate.php"><em><b>Donate</b></em></a></li>
           </ul>
         </div>
         <div class="row-3">
@@ -51,8 +51,7 @@
             <div class="container">
               <div class="col-1">
                 <div class="title"><img src="images/header-title1.gif" alt=""></div>
-                <p class="txt1">The full spectrum of virtual hosting services,
-                  exchange e-mail hosting, domain names and broadband.</p>
+                <p class="txt1">It is our pleasure to provide you with the best service and support, all for free.</p>
 
               </div>
               <div class="col-2">
@@ -63,11 +62,11 @@
                        <li class="icon-2"><span>Reliable &amp; Fully Secure</span></li>
                       <li class="icon-3"><span>Mysql Database Support</span></li>
                       <li class="icon-1"><span>Unrestricted PHP</span></li>
-                      <li class="icon-4"><span><a href="/support/module.php?module=HelpCenter">Live Support</a></span></li>
-                    </ul>
-                  </div>
-                </div>
-
+                      <li class="icon-4"><span><a href="support.php">Live Support</a></span></li><a href="support.php">
+                    </a></ul><a href="support.php">
+                  </a></div><a href="support.php">
+                </a></div><a href="support.php">
+                </a><div class="button"><a href="support.php"></a><a href="hosting.php"><img src="images/button-2.gif" alt=""></a></div>
               </div>
               <div class="clear"></div>
             </div>
@@ -92,11 +91,13 @@
       <!-- content -->
       <div id="content">
         <div class="indent1">
-			<h3>MyFireHost.com Privacy Policy</h3><p class="p1">In an effort to protect our clients' and site visitors privacy and rights, Hosting24.com has established a Privacy Policy which explains what information we gather on visitors and what we do with information that we gather. This Privacy Policy governs the manner in which Hosting24.com collects, uses, maintains and discloses information collected from users of this Web site (each, a "User").</p><h4>Privacy:</h4><p class="p1">Users' privacy is very important to Hosting24.com. We are committed to safeguarding the information Users entrust to Hosting24.com</p><h4>The Information We Collect:</h4><p class="p1">Hosting24.Com collects personally identifiable information from Users through online forms for ordering products and services. We may also collect information about how Users use our Web site, for example, by tracking the number of unique views received by the pages of the Web site or the domains from which Users originate. We use "cookies" to track how Users use our Web site.</p><h4>How We Use Information:</h4><p class="p1">Hosting24.com may use personally identifiable information collected through our Web site to contact Users regarding products and services offered by Hosting24.com and its trusted affiliates, independent contractors and business partners, and otherwise to enhance Users' experience with Hosting24.com and such affiliates, independent contractors and business partners. At no time will Hosting24.com's database of users ever be sold to any entity for the purpose of marketing or mailing lists. Personal information will not be sold or otherwise transferred to our business partners without your prior consent, except that we will disclose the information we collect to third parties when, in our good faith judgment, we are obligated to do so under applicable laws</p>
-<p> E-mail: <a href="#">admin@myfirehost.com</a></p>		</div>
+			<h3>MyFireHost.com Privacy Policy</h3><p class="p1">In an effort to protect our clients' and site visitors privacy and rights, MyFireHost.com has established a Privacy Policy which explains what information we gather on visitors and what we do with information that we gather. This Privacy Policy governs the manner in which MyFireHost.com collects, uses, maintains and discloses information collected from users of this Web site (each, a "User").</p><h4>Privacy:</h4><p class="p1">Users' privacy is very important to MyFireHost.com. We are committed to safeguarding the information Users entrust to MyFireHost.com</p><h4>The Information We Collect:</h4><p class="p1">MyFireHost.com collects personally identifiable information from Users through online forms for ordering products and services. We may also collect information about how Users use our Web site, for example, by tracking the number of unique views received by the pages of the Web site or the domains from which Users originate. We use "cookies" to track how Users use our Web site.</p><h4>How We Use Information:</h4><p class="p1">MyFireHost.com may use personally identifiable information collected through our Web site to contact Users regarding products and services offered by MyFireHost.com and its trusted affiliates, independent contractors and business partners, and otherwise to enhance Users' experience with MyFireHost.com and such affiliates, independent contractors and business partners. At no time will MyFireHost.com's database of users ever be sold to any entity for the purpose of marketing or mailing lists. Personal information will not be sold or otherwise transferred to our business partners without your prior consent, except that we will disclose the information we collect to third parties when, in our good faith judgment, we are obligated to do so under applicable laws</p>
+We use third-party advertising companies to serve ads when you visit our website. These companies may use information (not including your name, address, email address, or telephone number) about your visits to this and other websites in order to provide advertisements about goods and services of interest to you. If you would like more information about this practice and to know your choices about not having this information used by these companies, <a href="http://www.google.com/privacy_ads.html">click here</a>.
+			
+			<p> E-mail: <a href="mailto:admin@myfirehost.com">admin@myfirehost.com</a></p>		</div>
       </div><!-- footer -->
 <div id="footer">
-	<p>MyFireHost.com © 2009 | <a href="privacy-policy.php">Privacy Policy</a> | <a href="terms-of-service.php">Terms of Service</a></p>
+	<p>MyFireHost.com © 2009 | <a href="/privacy-policy.php">Privacy Policy</a> | <a target="_blank" href="/terms-of-service.php">Terms of Service</a> | <a target="_blank" href="/report-abuse">Report Abuse</a></p>
 </div>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
@@ -106,7 +107,8 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 try {
 var pageTracker = _gat._getTracker("UA-8996604-1");
 pageTracker._trackPageview();
-} catch(err) {}</script>    </div>
+} catch(err) {}</script>
+    </div>
   </div>
 </div>
 
