--- a/n/nu/nus/nus.edu.sg.html
+++ b/n/nu/nus/nus.edu.sg.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nus.edu.sg privacy policy that was archived on 2009-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090606124538id_/http%3A//www.nus.edu.sg/policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nus.edu.sg privacy policy that was archived on 2009-10-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091016011820id_/http%3A//www.nus.edu.sg/policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -54,13 +54,14 @@
 <div id="pointermenu2">
 <ul>
 <li><a href="http://exchange.nus.edu.sg/" target="_blank"><span style="text-transform:none">myEMAIL</span></a></li>
-<li><a href="https://ivle.nus.edu.sg/lms/default.aspx" target="_blank">ivle</a></li>
+<li><a href="https://ivle.nus.edu.sg" target="_blank">ivle</a></li>
 <li><a href="http://www.lib.nus.edu.sg/" target="_blank">library</a></li>
 <li><a href="http://www.nus.edu.sg/campusmap/">maps</a></li>
 <li><a href="https://aces01.nus.edu.sg/CoE/jsp/coeMain.jsp">calendar</a></li>
 <li><a href="http://www.nus.edu.sg/sitemap.php">sitemap</a></li>
 <!--<li><a href="#">a-z index</a></li>-->
 <li><a href="http://www.nus.edu.sg/contactus.php">contact</a></li>
+<li><a href="http://www.nus.edu.sg/ecards" style="text-transform:none"><font color="#FFFF00">e-CARDS</font></a></li>
 <!--<li><a href="#"><font color="#FFFF00">&#20013;&#25991;&#29256;</font></a></li>-->
 
 <li><a href="#" id="rightcorner">&nbsp;</a></li>
@@ -126,7 +127,7 @@
 <!--[if lte IE 6]><table><tr><td><![endif]-->
 		<ul>
 			<li><a href="http://www.nus.edu.sg/annualreport/">Annual Report</a></li>
-			<li><a href="http://www.nus.edu.sg/dpr/publications/report.htm">Annual Research Report</a></li>
+			<li><a href="http://www.nus.edu.sg/dpr/publications/report.htm">Research Report</a></li>
 			<li><a href="http://www.nus.edu.sg/aboutus/NUSCorp_Brochure_2009.pdf">Corporate Brochure</a></li>
 			
 			<!--<li><a href="http://www.nus.edu.sg/aboutus/factsfigures.php">Facts & Figures</a></li>-->
@@ -152,7 +153,7 @@
 <li><a href="http://www.nus.edu.sg/global/">Global<!--[if IE 7]><!--></a><!--<![endif]-->
 <!--[if lte IE 6]><table><tr><td><![endif]-->
 	<ul>
-	<li><a href="https://www.alumni.nus.edu.sg/alumNET/groups/overseas.jsp"> Global Alumni</a></li>
+	<li><a href="https://www.alumnet.nus.edu.sg/"> Global Alumni</a></li>
 	<li><a class="drop" href="javascript:;">Global Networking<!--[if IE 7]><!--></a><!--<![endif]-->
 <!--[if lte IE 6]><table><tr><td><![endif]-->
 		<ul>
@@ -241,7 +242,7 @@
 <!--[if lte IE 6]><table><tr><td><![endif]-->
 		<ul>
 			<li><a href="http://www.nus.edu.sg/iro/intl/students/prog/sep/index.html">Student Exchange Programme</a></li>
-			<li><a href="http://www.nus.edu.sg/oam/international/BYA-admission.html">Undergraduate Admissions</a></li>
+			<li><a href="http://www.nus.edu.sg/oam/apply/international/admissionreq/BYA-admissionreq.html">Undergraduate Admissions</a></li>
 			<li><a href="http://www.nus.edu.sg/registrar/edu/ng.html">Non-graduating Programmes</a></li>
 		</ul>
 <!--[if lte IE 6]></td></tr></table></a><![endif]-->
@@ -257,6 +258,7 @@
 	<ul>
 	<li><a href="http://www.nus.edu.sg/registrar/calendar.html">Academic Calendar</a></li>
 	<li><a href="http://www.nus.edu.sg/aboutus/facultyschools.php">Faculties and Schools</a></li>
+	<li><a href="http://www.nus.edu.sg/teachingacademy/">NUS Teaching Academy</a></li>
 	<li><a class="drop" href="javascript:;">  Global Education<!--[if IE 7]><!--></a><!--<![endif]-->
 <!--[if lte IE 6]><table><tr><td><![endif]-->
 		<ul>
@@ -291,7 +293,7 @@
 			<li><a href="http://www.lib.nus.edu.sg/">Library</a></li>
 			<li><a href="http://www.nus.edu.sg/nex/">NUS Extension</a></li>
 			<li><a href="http://www.nus.edu.sg/nuspress/">NUS Publishing</a></li>
-			<li><a href="https://ivle.nus.edu.sg/lms/default.aspx">Online Learning (IVLE)</a></li>
+			<li><a href="https://ivle.nus.edu.sg">Online Learning (IVLE)</a></li>
 			<li><a href="http://courses.nus.edu.sg/courseware/ITSELF/">Self-access English Learning Facility</a></li>
 		</ul>
 <!--[if lte IE 6]></td></tr></table></a><![endif]-->
