--- a/m/mi/min/minitokyo.net.html
+++ b/m/mi/min/minitokyo.net.html
@@ -1,130 +1,69 @@
-<!--The following is the downloaded HTML source of the minitokyo.net privacy policy that was archived on 2009-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616065232id_/http%3A//support.minitokyo.net/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the minitokyo.net privacy policy that was archived on 2009-10-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091016055222id_/http%3A//support.minitokyo.net/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 <title>Minitokyo Privacy Policy - Minitokyo</title>
-<!--<base href="http://support.minitokyo.net/" />-->
-<link rel="stylesheet" type="text/css" href="http://static.minitokyo.net/main.css?5" media="all" title="default">
-<link rel="stylesheet" type="text/css" href="http://www.minitokyo.net/css/default/0" media="all" title="default">
-
-<script type="text/javascript">
-/* <![CDATA[ */
-
-
-window.onload = function() {
-	d = DOM.get('leaderboardDest');
-	s = DOM.get('topAd');
-	d.appendChild(s);
-	d = DOM.get('skyscraperDest');
-	s = DOM.get('skyscraper');
-	d.appendChild(s);
-	s.style.display = 'block';
-
-	d = DOM.get('banner1dest');
-	s = DOM.get('banner1');
-	d.appendChild(s);
-
-	if (DOM.get('menubannerdest')) {
-		d = DOM.get('menubannerdest');
-		s = DOM.get('menubanner');
-		d.appendChild(s);
-	}
-}
-
-/* ]]> */
-</script>
+<link rel="stylesheet" type="text/css" href="http://static.minitokyo.net/default.css?29">
+<style type="text/css">
+ul, ol { margin-left: 3em; } li { line-height: 2em; }</style>
 </head>
 <body>
-<div id="top">
-<div id="topLeft"></div>
-<div id="topCenter">
-<div id="leaderboardDest"></div>
-
-<ul id="menu">
-	<li><a href="http://www.minitokyo.net/">Minitokyo</a></li>
-	<li><a href="http://browse.minitokyo.net/">Browse</a></li>
-	<li><a href="http://forum.minitokyo.net/">Forum</a></li>
-	<li><a href="http://gallery.minitokyo.net/art/">Art</a></li>
-	<li><a href="http://gallery.minitokyo.net/scans/">Scans</a></li>
-	<li><a href="http://reviews.minitokyo.net/">Reviews</a></li>
-	<li><a href="http://members.minitokyo.net/">Members</a></li>
-	<li><a href="http://groups.minitokyo.net/">Groups</a></li>
-	<li><a href="http://support.minitokyo.net/">Support</a></li>
-</ul><!--/#menu-->
-</div><!--/#topCenter-->
-</div><!--/#top-->
-
-<div id="main">
-<div id="leftMenu">
-
-<div class="outer"><div class="inner">
-<h1>Login</h1>
-<form action="http://my.minitokyo.net/login" method="post">
-<fieldset>
-<legend><span style="text-decoration: underline; margin: 0; display: inline; width: auto; float: none; ">L</span>ogin</legend>
-	<div><!-- if this div makes IE happy, sure man -->
-	<input class="text" type="text" name="username" tabindex="1" accesskey="l">
-	<input class="text" type="password" name="password" tabindex="1">
-	<input type="submit" value="Login">
-	</div><!-- /useless IE div -->
-</fieldset>
-</form>
-<p style="margin: 2px; ">Need to <a href="http://my.minitokyo.net/register/">register?</a> <a href="http://my.minitokyo.net/lostpassword/">Lost password?</a></p>
-</div></div>
-
-
-<div class="outer"><div class="inner">
-<h1>Advertisements</h1>
-<div id="menubannerdest" style="text-align: center; height: 240px; "></div>
-</div></div>
-
-
-<div class="outer"><div class="inner">
-<h1>Partners &amp; Links</h1>
-<ul>
-	<li class="group">Affiliates</li>
-	<li><a href="http://www.zerochan.net/">Zerochan - HQ Image Board</a></li>
-	<li><a href="http://www.animewallpapers.com/">Anime Wallpapers</a></li>
-	<li><a href="http://www.animegalleries.net/">Anime Galleries</a></li>
-	<li><a href="http://www.animelyrics.com/">Anime Lyrics</a></li>
-	<li><a href="http://www.advancedanime.com/" title="Advanced Anime">Advanced Anime</a></li>
-	<li><a href="http://www.downloadsanime.com/">Anime Downloads</a></li>
-	<li><a href="http://www.animeonline.net/">Anime Online</a></li>
-	<li><a href="http://www.desktopanime.com/" rel="nofollow">DA! Desktop Anime</a></li>
-	<li><a href="http://www.animefuel.com/" rel="nofollow">Watch Anime Online</a></li>
-	<li><a href="http://www.animestocks.com/" rel="nofollow">Anime Stocks</a></li>
-	<li><a href="http://www.digitalart.org/" rel="nofollow">DigitalArt</a></li>
-	<li><a href="http://vndb.org/">The Visual Novel Database</a></li>
-	<li><a href="http://anime-wallpapers.com" title="Anime Wallpapers">Anime Wallpapers</a></li>
+<div id="wrapper">
+<div id="header">
+<div id="leaderboard"><div><!-- leaderboard --></div></div>
+<h1><a href="http://www.minitokyo.net/">Minitokyo</a></h1>
+&nbsp;<!-- QQ -->
+<div id="nav-bar"><ul>
+	<li><a href="http://my.minitokyo.net/login">Login</a><div style="width: 250px; "><form id="login-form" method="post" action="http://my.minitokyo.net/login"><fieldset style="border: none; ">
+		<label>Username</label>
+		<input type="text" name="username">
+		<label>Password</label>
+		<input type="password" name="password">
+		<input type="submit" value="Login">
+		<a href="http://my.minitokyo.net/lostpassword">Forgot password?</a>
+	</fieldset></form></div></li>
+	<li><a href="http://my.minitokyo.net/register">Register</a></li>
 </ul>
-</div></div>
-</div><!--/#leftMenu-->
-
-<div id="rightMenu">
-
-<div class="outer"><div class="inner">
-<h1>Advertisements</h1>
-<div id="skyscraperDest" style="text-align: center; margin: 5px 0; position: relative; height: 600px; ">
+<form id="search-form" action="http://www.minitokyo.net/search" method="get"><fieldset style="border: none; ">
+	<label>Search</label>
+	<input size="60" type="text" name="q" class="text" value="">
+	<div id="search-filter"><span>Tags</span>
+	<div><ul>
+		<li>Tags</li>
+		<li>Forum</li>
+		<li>Members</li>
+		<li>Groups</li>
+	</ul></div>
+	</div>
+	<input class="submit" type="submit" value="Search">
+</fieldset></form>
 </div>
-</div></div>
-
-</div><!--/#rightMenu-->
-<div id="content">
-<div style="height: 0; font-size: 0; overflow: hidden; ">&nbsp;</div>
-
-<div class="outer"><div class="inner">
+</div>
+<div id="skyscraper"></div><div id="body">
+<div id="backbone">
+<a id="ad-toggle" href="/" title="Hide Advertisements">»</a>
+<ul id="sections">
+	<li><a href="http://browse.minitokyo.net/">Tags</a></li>
+	<li><a href="http://gallery.minitokyo.net/wallpapers">Wallpapers</a></li>
+	<li><a href="http://gallery.minitokyo.net/indy-art">Indy Art</a></li>
+	<li><a href="http://gallery.minitokyo.net/scans">Scans</a></li>
+	<li><a href="http://forum.minitokyo.net/">Forum</a></li>
+	<li><a href="http://reviews.minitokyo.net/">Reviews</a></li>
+	<li><a href="http://groups.minitokyo.net/">Groups</a></li>
+</ul>
+<ul id="tabs">
+<li style="visibility: hidden; "><a>View</a></li></ul>
 <h1>Minitokyo Privacy Policy</h1>
-<h2>Minitokyo Support</h2>
-<div id="banner1dest" style="text-align: center; height: 60px; "></div>
-<p id="treeNav">
+</div>
+
+<div id="content">
+<p id="nav">
 	<a href="http://www.minitokyo.net/">Minitokyo</a>
-»	<a href="http://support.minitokyo.net/">Support</a>
-	<span><span>&nbsp;</span>Minitokyo Privacy Policy</span>
+ » 	<a href="http://support.minitokyo.net/">Support</a>
+	» <i>Minitokyo Privacy Policy</i>
 </p>
-</div></div>
-<div class="outer"><div class="inner">
+<div style="margin: 0 auto; max-width: 760px; ">
 <h1>Privacy Policy</h1>
-<h3>Privacy Policy Statement</h3>
 <p>
 	Minitokyo is committed to protecting your privacy. That is why we have adopted
 	this Privacy Policy. This Privacy Policy is intended to describe how your personal
@@ -133,7 +72,7 @@ window.onload = function() {
 	by visiting and using Minitokyo.net, you are accepting the practices described
 	in this Privacy Policy.
 </p>
-<h3>What Information is Minitokyo gathering about its visitors and how is it being used?</h3>
+<h2>What Information is Minitokyo gathering about its visitors and how is it being used?</h2>
 <p>
 	Every computer connected to the Internet is provided with a domain name (e.g.
 	earthlink.net) and an IP Address (e.g. 192.164.13.145). When a visitor requests
@@ -163,7 +102,7 @@ window.onload = function() {
 	URLs and Search Engine terms, we can strategically enhance our exposure on the
 	Internet.
 </p>
-<h3>What about Cookies?</h3>
+<h2>What about Cookies?</h2>
 <p>
 	Cookies are small pieces of data that are transferred to your computer's hard
 	drive through your Web browser from our Web Server. A cookie cannot read data
@@ -181,7 +120,7 @@ window.onload = function() {
 	at our website and other websites may be diminished and some features may not
 	work as intended.
 </p>
-<h3>What other information does Minitokyo request?</h3>
+<h2>What other information does Minitokyo request?</h2>
 <p>
 	We may also request your e-mail address or mailing address for the purposes of
 	conducting a survey, adding you to our mailing list, or by your request to have
@@ -201,7 +140,7 @@ window.onload = function() {
 	you will be required to provide specific information that will be routed to the
 	appropriate contact within Minitokyo.
 </p>
-<h3>Will Minitokyo disclose the information collected to Third Parties?</h3>
+<h2>Will Minitokyo disclose the information collected to Third Parties?</h2>
 <p>
 	Minitokyo will disclose your personal information or any of its log file information
 	when required by law or in the good-faith belief that such actions are necessary
@@ -223,7 +162,7 @@ window.onload = function() {
 	their Privacy Policies or how those web sites manage information about their users.
 	We strongly urge you to check with those web sites to determine their privacy policy.
 </p>
-<h3>Third Party Advertising</h3>
+<h2>Third Party Advertising</h2>
 <p>
 	We use Valueclick Media and other third-party advertising companies to serve ads
 	when you visit our Web site. These companies may use information (not including your
@@ -234,7 +173,7 @@ window.onload = function() {
 	companies, please <a href="http://www.networkadvertising.org/optout_nonppii.asp">click
 	here</a>.
 </p>
-<h3>Third Party Cookies</h3>
+<h2>Third Party Cookies</h2>
 <p>
 	In the course of serving advertisements to this site, our third-party advertiser
 	may place or recognize a unique 'cookie' on your browser.
@@ -250,90 +189,49 @@ window.onload = function() {
 	we disclose it.
 </p>
 <p>
-	Copyright 2004-2006, Minitokyo. All Rights Reserved.
-</p>
-<p>
 	<strong>Revision: March 2006</strong>
 </p>
-</div></div><div id="footer">
-	<a href="http://support.minitokyo.net/about/">About</a> |
-	<a href="http://support.minitokyo.net/privacy/">Privacy Policy</a> |
-	<a href="http://support.minitokyo.net/policy/">Community Policy</a><br>
-	Copyright 2004 - 2009 Minitokyo<br>
-</div><!--/#footer-->
-</div><!--/#content-->
-
-</div><!--/#main-->
-<div style="display: none">
-
-<script type="text/javascript" src="http://www.minitokyo.net/framework.js"></script>
-
-<div id="topAd">
-
-<!-- ValueClick Media 468x60 and 728x90 Banner CODE for minitokyo.net -->
-<script language="javascript" src="http://media.fastclick.net/w/get.media?sid=25037&amp;m=1&amp;tp=5&amp;d=j&amp;t=s"></script>
-<noscript><a href="http://media.fastclick.net/w/click.here?sid=25037&m=1&c=1" target="_top">
-<img src="http://media.fastclick.net/w/get.media?sid=25037&m=1&tp=5&d=s&c=1"
-width=728 height=90 border=1></a></noscript>
-<!-- ValueClick Media 468x60 and 728x90 Banner CODE for minitokyo.net -->
-
+</div></div>
+<div id="footer">
+<div>
+<p id="partners">
+	<a href="http://www.zerochan.net/">Zerochan</a> |
+	<a href="http://www.animewallpapers.com/">Anime Wallpapers</a> |
+	<a href="http://www.animegalleries.net/">Anime Galleries</a> |
+	<a href="http://www.animelyrics.com/">Anime Lyrics</a> |
+	<a href="http://www.advancedanime.com/" title="Advanced Anime">Advanced Anime</a> |
+	<a href="http://www.animeonline.net/">Anime Online</a><br>
+	<a href="http://www.desktopanime.com/" rel="nofollow">DA!</a> |
+	<a href="http://www.animefuel.com/" rel="nofollow">Watch Anime Online</a> |
+	<a href="http://www.animestocks.com/" rel="nofollow">Anime Stocks</a> |
+	<a href="http://www.digitalart.org/" rel="nofollow">DigitalArt</a> |
+	<a href="http://vndb.org/">VNDB</a> |
+	<a href="http://anime-wallpapers.com" title="Anime Wallpapers">Anime Wallpapers</a>
+</p>
+<p id="copyright">
+	© 2004-2009 Minitokyo -
+	<a href="http://support.minitokyo.net/about">About</a> |
+	<a href="http://support.minitokyo.net/faq">FAQ</a> |
+	<a href="http://support.minitokyo.net/policy">Policy</a> |
+	<a href="http://support.minitokyo.net/privacy">Privacy</a>
+</p>
 </div>
-<div id="skyscraper">
-
-<!-- ValueClick Media 120x600 and 160x600 SkyScraper CODE for minitokyo.net -->
-<script language="javascript" src="http://media.fastclick.net/w/get.media?sid=25037&amp;m=3&amp;tp=7&amp;d=j&amp;t=n"></script>
-<noscript><a href="http://media.fastclick.net/w/click.here?sid=25037&m=3&c=1" target="_blank">
-<img src="http://media.fastclick.net/w/get.media?sid=25037&m=3&tp=7&d=s&c=1"
-width=160 height=600 border=1></a></noscript>
-<!-- ValueClick Media 120x600 and 160x600 SkyScraper CODE for minitokyo.net -->
-
+</div><!--/#footer -->
 </div>
-
-<div id="banner1">
+</div><!--/#body -->
+<script type="text/javascript" src="http://static.minitokyo.net/jquery.js"></script>
+<script type="text/javascript" src="http://static.minitokyo.net/jquery.autocomplete.js"></script>
+<script type="text/javascript" src="http://static.minitokyo.net/ui.js?10"></script>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
 <script type="text/javascript">
 /* <![CDATA[ */
 
-google_ad_client = "pub-3000346950361353";
-google_ad_width = 468;
-google_ad_height = 60;
-google_ad_format = "468x60_as";
-google_ad_type = "text";
-google_ad_channel = "9947942525";
-google_color_border = "31343E";
-google_color_bg = "31343E";
-google_color_link = "AABBCC";
-google_color_url = "AABBCC";
-google_color_text = "9098AB";
+$(document).ready(function() {
+
+	try { _uacct = "UA-274405-1"; urchinTracker(); } catch (err) { }
+});
 
 /* ]]> */
 </script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
-</div>
-<div id="menubannerdest">
-<script type="text/javascript">
-/* <![CDATA[ */
-
-google_ad_client = "pub-3000346950361353";
-google_ad_width = 120;
-google_ad_height = 240;
-google_ad_format = "120x240_as";
-google_ad_type = "text_image";
-google_ad_channel = "0272542587";
-google_color_border = "31343E";
-google_color_bg = "31343E";
-google_color_link = "AABBCC";
-google_color_url = "AABBCC";
-google_color_text = "9098AB";
-
-/* ]]> */
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
-</div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">try { _uacct = "UA-274405-1"; urchinTracker(); } catch (err) { } </script>
-
-</div>
-
 
 </body></html>
