--- a/b/ba/ban/bandhanmf.com.html
+++ b/b/ba/ban/bandhanmf.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bandhanmf.com privacy policy that was archived on 2009-05-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090529022055id_/http%3A//www.bandhanmf.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bandhanmf.com privacy policy that was archived on 2009-10-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091016062330id_/http%3A//www.bandhanmf.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -100,7 +100,7 @@ menu2[3]='<a href="media.html">MEDIA COVERAGE</a>'
 menu2[4]='<a href="imphappen.html">IMPORTANT EVENTS</a>'
 var menu3=new Array()
 menu3[0]='<a href="cuf-thp.html">CUF-THP</a>'
-menu3[1]='<a href="mahp.html">MAHP</a>'
+menu3[1]='<a href="mahp.html">BHP</a>'
 menu3[2]='<a href="bep.html">BEP</a>'
 		
 
