--- a/l/li/lit/littlecaesars.com.html
+++ b/l/li/lit/littlecaesars.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the littlecaesars.com privacy policy that was archived on 2009-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090619211127id_/http%3A//www.littlecaesars.com/includes/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the littlecaesars.com privacy policy that was archived on 2009-10-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091016065254id_/http%3A//www.littlecaesars.com/includes/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy - Little Caesars Pizza</title>
@@ -30,7 +30,7 @@ body {
     <td height="27" valign="top">
     <table border="0" cellpadding="0" cellspacing="0" align="center">
       <tbody><tr>
-        <td colspan="2"><a href="../default.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image1','','/images/nav/us_nav_over_01.jpg',1)"><img src="/images/nav/us_nav_bar_01.jpg" alt="HOME" name="Image1" width="50" height="27" border="0"></a><a href="/pizza/products.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image2','','/images/nav/us_nav_over_02.jpg',1)"><img src="/images/nav/us_nav_bar_02.jpg" alt="PIZZA AND PRODUCTS MENU" name="Image2" width="46" height="27" border="0"></a><a href="http://franchise.littlecaesars.com" target="_blank" onmouseover="MM_swapImage('Image3','','/images/nav/us_nav_over_03.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="/images/nav/us_nav_bar_03.jpg" alt="FRANCHISE OPPORTUNITIES" name="Image3" width="152" height="27" border="0"></a><a href="https://littlecaesars.tms.hrdepartment.com" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image4','','/images/nav/us_nav_over_04.jpg',1)"><img src="/images/nav/us_nav_bar_04.jpg" alt="JOBS" name="Image4" width="44" height="27" border="0"></a><a href="/news/in_the_news.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image5','','/images/nav/us_nav_over_05.jpg',1)"><img src="/images/nav/us_nav_bar_05.jpg" alt="NEWS AND INFO" name="Image5" width="86" height="27" border="0"></a><a href="http://little.know-where.com/littlecaesars/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','/images/nav/us_nav_over_06.jpg',1)"><img src="/images/nav/us_nav_bar_06.jpg" alt="LOCAL LITTLE CAESARS PIZZA" name="Image6" width="128" height="27" border="0"></a><a href="/kids/games.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','/images/nav/us_nav_over_07.jpg',1)"><img src="/images/nav/us_nav_bar_07.jpg" alt="KIDS ROOM" name="Image7" width="79" height="27" border="0"></a><a href="/customer_service/customer_service.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','/images/nav/us_nav_over_08.jpg',1)"><img src="/images/nav/us_nav_bar_08.jpg" alt="CONTACT US" name="Image8" width="81" height="27" border="0"></a><a href="/es/default.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','/images/nav/us_nav_over_09.jpg',1)"><img src="/images/nav/us_nav_bar_09.jpg" alt="ESPAÑOL" name="Image9" width="60" height="27" border="0"></a><a href="http://www.littlecaesarsstuff.com" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image10','','/images/nav/us_nav_over_10.jpg',1)" rel="nofollow" target="_blank"><img src="/images/nav/us_nav_bar_10.jpg" alt="CUSTOM MERCHANDISE" name="Image10" width="49" height="27" border="0"></a></td>
+        <td colspan="2"><a href="../default.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image1','','/images/nav/us_nav_over_01.jpg',1)"><img src="/images/nav/us_nav_bar_01.jpg" alt="HOME" name="Image1" width="50" height="27" border="0"></a><a href="/pizza/products.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image2','','/images/nav/us_nav_over_02.jpg',1)"><img src="/images/nav/us_nav_bar_02.jpg" alt="PIZZA AND PRODUCTS MENU" name="Image2" width="46" height="27" border="0"></a><a href="http://franchise.littlecaesars.com" target="_blank" onmouseover="MM_swapImage('Image3','','/images/nav/us_nav_over_03.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="/images/nav/us_nav_bar_03.jpg" alt="FRANCHISE OPPORTUNITIES" name="Image3" width="152" height="27" border="0"></a><a href="http://www.careerbuilder.com/csh/search.aspx?csh=CSH_LittleCaesars&amp;pubjobs=true&amp;privjobs=false&amp;int=true" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image4','','/images/nav/us_nav_over_04.jpg',1)"><img src="/images/nav/us_nav_bar_04.jpg" alt="JOBS" name="Image4" width="44" height="27" border="0"></a><a href="/news/in_the_news.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image5','','/images/nav/us_nav_over_05.jpg',1)"><img src="/images/nav/us_nav_bar_05.jpg" alt="NEWS AND INFO" name="Image5" width="86" height="27" border="0"></a><a href="http://little.know-where.com/littlecaesars/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','/images/nav/us_nav_over_06.jpg',1)"><img src="/images/nav/us_nav_bar_06.jpg" alt="LOCAL LITTLE CAESARS PIZZA" name="Image6" width="128" height="27" border="0"></a><a href="/kids/games.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','/images/nav/us_nav_over_07.jpg',1)"><img src="/images/nav/us_nav_bar_07.jpg" alt="KIDS ROOM" name="Image7" width="79" height="27" border="0"></a><a href="/customer_service/customer_service.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','/images/nav/us_nav_over_08.jpg',1)"><img src="/images/nav/us_nav_bar_08.jpg" alt="CONTACT US" name="Image8" width="81" height="27" border="0"></a><a href="/es/default.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','/images/nav/us_nav_over_09.jpg',1)"><img src="/images/nav/us_nav_bar_09.jpg" alt="ESPAÑOL" name="Image9" width="60" height="27" border="0"></a><a href="http://www.littlecaesarsstuff.com" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image10','','/images/nav/us_nav_over_10.jpg',1)" rel="nofollow" target="_blank"><img src="/images/nav/us_nav_bar_10.jpg" alt="CUSTOM MERCHANDISE" name="Image10" width="49" height="27" border="0"></a></td>
 	    </tr>
       <tr>
         <td width="200" height="22">&nbsp;</td>
@@ -259,10 +259,14 @@ a:active {
 <br>
 
 
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
 <script type="text/javascript">
-_uacct = "UA-420362-5";
-urchinTracker();
-</script>
-</body></html>
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-420362-5");
+pageTracker._setDomainName(".littlecaesars.com");
+pageTracker._trackPageview();
+} catch(err) {}
+</script></body></html>
